--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -46,10 +46,23 @@
       </nav>
     </header>
 
+    <div id="main" role="main">
+      <div class="container">
+        <div class="content">
+          <div class="row">
+            <div class="span12 view">
+              <div ng-view="true"></div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
     <div class="col-md-6 col-md-offset-3">
       <footer>
         <p class="copyright-footer">&copy; Amay presents Bookmark Manager</p>
       </footer>
     </div>
-</body>
+
+  </body>
 </html>
